修改文件: 微信小程序.md

--- a/微信小程序.md
+++ b/微信小程序.md
@@ -14,5 +14,12 @@ grammar_cjkRuby: true
  3. 开发适配成本低
  4. 容易小规模试错，然后快速迭代
  5. 跨平台
-###  
+###  疯狂的微信小程序
+ 1. 截止2020年底，微信、WeChat合并月活跃账户数达到12.25亿，同比再次增长5.2%，环比一个季度内也增加了1220万，继续稳坐“第一国民APP”的宝座。
+> [微信月活用户已达12.25亿：不愧第一国民APP](https://new.qq.com/rain/a/20210324a09q0500)
+
+ 2. 微信小程序日活破4亿，已覆盖超200个细分行业
+> [微信小程序日活破4亿，已覆盖超200个细分行业](https://new.qq.com/rain/a/20200910A0LTFF00)
+
+
 
